ajout des llm enfin XD